# augmentacao-assessores

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.baileys  README.md  agemini_lib  baileys_service.js  cloudbuild.yaml  dev_setup.sh  entrypoint.sh  gerar_pdf_teste.py  main.py  organize_drive.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_drive_teste.py  start_services.sh  test_pipeline.py  test_pipeline_drive.py  test_pipeline_v2.py
src/: __init__.py  config.py  orquestrador.py  whatsapp.py
